objects/VisualAntidote__FastFormsTokenInfo__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>VisualAntidote__API_Version__c</fullName>
        <label>API Version</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Native_Setup_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Native Setup Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__RefreshToken__c</fullName>
        <inlineHelpText>This field is not used anymore.</inlineHelpText>
        <label>Old Refresh Token Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Reset__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this field if you want to reset your Refresh Token. Do not forget to Publish your form after you check this field.</inlineHelpText>
        <label>Reset Refresh Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Formstack Token Information</label>
</CustomObject>